--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,5 +8,20 @@ api-version: 1.13
 author: StarTux
 website: https://github.com/StarTux/Territory
 
-depend: []
+depend: [Core]
 softdepend: [Decorator]
+
+commands:
+
+  territory:
+    description: Admin command
+    usage: |-
+      /territory here - Current location info
+
+permissions:
+
+  territory.territory:
+    description: Use the /territory command (admin)
+
+  territory.mine:
+    description: Use the /mine command (players)
