Update for Paper 1.19 and incorporate the Structure plugin

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,13 +3,13 @@ main: com.cavetale.territory.TerritoryPlugin
 name: Territory
 version: 0.1
 description: Create territories in the mining world.
-api-version: 1.13
+api-version: 1.19
 
 author: StarTux
 website: https://github.com/StarTux/Territory
 
 depend: [Core]
-softdepend: [Decorator]
+softdepend: [Decorator, Structure]
 
 commands:
 
