--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,8 +8,8 @@ api-version: 1.19
 author: StarTux
 website: https://github.com/StarTux/Territory
 
-depend: [Core]
-softdepend: [Decorator, Structure]
+depend: [Core, Structure]
+softdepend: [Decorator]
 
 commands:
 
