--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ author: StarTux
 website: https://github.com/StarTux/Territory
 
 depend: [Core, Structure]
-softdepend: [Decorator]
+softdepend: [Decorator, Area]
 
 commands:
 
